tests/ui/missing-supertrait.stderr
error[E0277]: the trait bound `__T: erased_serde::private::serde::Serialize` is not satisfied
 --> tests/ui/missing-supertrait.rs:5:1
  |
5 | serialize_trait_object!(MyTrait);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `erased_serde::private::serde::Serialize` is not implemented for `__T`
  |
  = note: required because of the requirements on the impl of `erased_serde::Serialize` for `__T`
note: required by a bound in `require_erased_serialize_impl`
 --> src/private.rs
  |
  |     T: ?Sized + crate::Serialize,
  |                 ^^^^^^^^^^^^^^^^ required by this bound in `require_erased_serialize_impl`
  = note: this error originates in the macro `$crate::__internal_serialize_trait_object` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting this bound
  |
90|                 __T + erased_serde::private::serde::Serialize: ?$crate::private::Sized + $($path)*,
  |                     +++++++++++++++++++++++++++++++++++++++++
